@@ -5,6 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_MODULES_CONFIGURATION="Module Manager Options"
+CONFIG_ADVANCED="Advanced configuration"
 
 MODULES_ASSIGNED_ALL="All"
 MODULES_ASSIGNED_VARIES="Varies"
@@ -44,12 +45,19 @@ MODULES_FIELD_CLIENT_ID_LABEL="Type of Module"
 
 MODULE_FIELD_CACHING_DESC="Select whether to cache the content of this module"
 MODULE_FIELD_CACHING_LABEL="Caching"
+MODULE_FIELD_CACHE_TIME_LABEL="Cache time"
+MODULE_FIELD_CACHE_TIME_DESC="The time before the module is recached"
 MODULE_FIELD_MODULECLASS_SFX_DESC="A suffix to be applied to the CSS class of the module. This allows for individual module styling."
 MODULE_FIELD_MODULECLASS_SFX_LABEL="Module Class Suffix"
 
 MODULES_MENU_ASSIGNMENT="Menu Assignment"
 MODULES_MODULE_ASSIGN="Module Assignment"
+MODULES_CUSTOM_OUTPUT="Custom output"
 MODULES_MODULE_DESCRIPTION="Module Description"
+
+MODULE_FIELD_CONTENT_LABEL="Text"
+MODULE_FIELD_CONTENT_DESC="Text"
+MODULE_FIELD_VALUE_NOCACHING="No caching"
 
 COM_MODULES_FIELD_PUBLISHED_LABEL="Published"
 COM_MODULES_FIELD_PUBLISHED_DESC="If published, this module will display on your site front-end or back-end depending on the module."
