@@ -126,6 +126,7 @@ JFIELD_METADATA_XREFERENCE_DESC="An optional reference used to link to external 
 JFIELD_METADATA_XREFERENCE_LABEL="Cross Reference"
 JFIELD_LANGUAGE_DESC="The language that the article is written in."
 JFIELD_LANGUAGE_LABEL="Language"
+JFIELD_MODULE_LANGUAGE_DESC="The language to which the module is assigned"
 JFIELD_OPTION_NONE="None"
 JFIELD_ENABLED_DESC="The enabled state of this item"
 JFIELD_ENABLED_LABEL="Enabled"
