@@ -1,11 +1,0 @@
-; $Id$
-; Joomla! Project
-; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8
-
-COMPONENTS="Components"
-FULL COMPONENT LIST="Full Component List"
-NUMBER OF COMPONENTS TO DISPLAY="Number of Components to display"
-THIS MODULE SHOWS A LIST OF INSTALLED COMPONENTS="This Module shows a list of installed Components"
-
