@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_CUSTOM_DESC="This Module allows you to create your own HTML Module using a WYSIWYG editor."
 MOD_CUSTOM="Custom HTML"
-MOD_CUSTOM_PREPARE_CONTENT_DESC="Optionally prepare the content with the Joomla Content Plug-ins."
-MOD_CUSTOM_PREPARE_CONTENT_LABEL="Prepare Content"
+MOD_CUSTOM_FIELD_PREPARE_CONTENT_DESC="Optionally prepare the content with the Joomla Content Plug-ins."
+MOD_CUSTOM_FIELD_PREPARE_CONTENT_LABEL="Prepare Content"
+MOD_CUSTOM_XML_DESCRIPTION="This Module allows you to create your own HTML Module using a WYSIWYG editor."
